pv#111969 - fix exhibitors slider button mobile

--- a/css/surcharge.css
+++ b/css/surcharge.css
@@ -14402,6 +14402,7 @@ body.product-details .mod-catal.catal-other-prd .block.nouveauxexpo .catal-other
 }
 
 .quicklinks.all_exhibitors {
+  text-align: center;
   position: absolute;
   z-index: 1;
   right: 20rem;
